--- a/Day4/JS_task2-1.html
+++ b/Day4/JS_task2-1.html
@@ -32,21 +32,21 @@ form {
     </form>
 <script>
 
-  var func = function() {
+var func = function() {
   var check1 = document.getElementById('secure').checked;
   var check2 = document.getElementById('disc').checked;
   var priceSec = 250;
   var priceDisc = 1000;
-  var Kintone = 3900;
+  var kintone = 3900;
 
   if (check1 === true && check2 === true) {
-    document.getElementById('price').textContent = Kintone + priceSec + priceDisc;
+    document.getElementById('price').textContent = kintone + priceSec + priceDisc;
   } else if (check1 === false && check2 === true) {
-    document.getElementById('price').textContent = Kintone + priceDisc;
+    document.getElementById('price').textContent = kintone + priceDisc;
   } else if (check1 === true && check2 === false) {
-    document.getElementById('price').textContent = Kintone + priceSec;
+    document.getElementById('price').textContent = kintone + priceSec;
   } else {
-    document.getElementById('price').textContent = Kintone;
+    document.getElementById('price').textContent = kintone;
   }
 }
 
